<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.onboard.OnboardFragment">

    <data>

        <import type="androidx.navigation.Navigation" />

        <variable
            name="direction"
            type="id.ac.esaunggul.rentalkamera.ui.auth.onboard.OnboardFragmentDirections.Companion" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/onboard_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/onboard_background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/onboard_image_description"
            android:src="@drawable/im_onboard"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/onboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/onboard_title"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintBottom_toTopOf="@id/onboard_descriptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/onboard_descriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/onboard_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboard_title" />

        <Button
            android:id="@+id/onboard_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(direction.actionOnboardToLogin())}"
            android:text="@string/login_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/onboard_register_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/onboard_register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            android:onClick="@{view -> Navigation.findNavController(view).navigate(direction.actionOnboardToRegister())}"
            android:text="@string/register_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/onboard_login_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>