<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.login.LoginFragment">

    <data>

        <variable
            name="loginViewModel"
            type="id.ac.esaunggul.rentalkamera.ui.auth.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/login_title"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:error="@{loginViewModel.emailError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.emailField}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            app:endIconMode="password_toggle"
            app:error="@{loginViewModel.passwordError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={loginViewModel.passwordField}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:onClick="@{() -> loginViewModel.login()}"
            android:text="@string/login_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>