<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.register.RegisterFragment">

    <data>

        <variable
            name="registerViewModel"
            type="id.ac.esaunggul.rentalkamera.ui.auth.register.RegisterViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:text="@string/register_title"
                android:textSize="@dimen/header_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_phone_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:error="@{registerViewModel.phoneError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_phone_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="phoneNumberDevice"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:text="@={registerViewModel.phoneField}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:error="@{registerViewModel.nameError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_phone_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="personName"
                    android:hint="@string/register_name_hint"
                    android:inputType="textPersonName"
                    android:text="@={registerViewModel.nameField}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_address_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:error="@{registerViewModel.addressError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_address_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="postalAddress"
                    android:hint="@string/address_hint"
                    android:inputType="textPostalAddress"
                    android:text="@={registerViewModel.addressField}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:error="@{registerViewModel.emailError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_address_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@={registerViewModel.emailField}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconMode="password_toggle"
                app:error="@{registerViewModel.passwordError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:text="@={registerViewModel.passwordField}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_confirm_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconMode="password_toggle"
                app:error="@{registerViewModel.passwordConfirmError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_confirm_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="password"
                    android:hint="@string/password_confirm_hint"
                    android:inputType="textPassword"
                    android:text="@={registerViewModel.passwordConfirmField}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_margin"
                android:text="@string/button_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_password_confirm_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>